--- a/.github/workflows/webpack.yml
+++ b/.github/workflows/webpack.yml
@@ -5,7 +5,11 @@ on:
     branches: [ "main" ]
   pull_request:
     branches: [ "main" ]
-
+    
+defaults:
+  run:
+    working-directory: ./cofmupy-gui-app
+    
 jobs:
   build:
     runs-on: ubuntu-latest
