--- a/.github/workflows/webpack.yml
+++ b/.github/workflows/webpack.yml
@@ -1,4 +1,4 @@
-name: NodeJS with Webpack
+name: Deploy App to Github pages
 
 on:
   push:
@@ -6,10 +6,19 @@ on:
   pull_request:
     branches: [ "main" ]
     
+permissions:
+  contents: read
+  pages: write
+  id-token: write
+
+concurrency:
+  group: "pages"
+  cancel-in-progress: false
+  
 defaults:
   run:
     working-directory: ./cofmupy-gui-app
-    
+
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -25,8 +34,15 @@ jobs:
       uses: actions/setup-node@v4
       with:
         node-version: ${{ matrix.node-version }}
-
+        cache: 'npm'
+        
+    - name: Install Dependencies
+      run: npm ci
+        
     - name: Build
       run: |
-        npm install
         npx webpack
+    - name: Add .nojekyll file
+      run: touch ./dist/cofmupy-gui/browser/.nojekyll
+      
+
