--- a/.github/workflows/webpack.yml
+++ b/.github/workflows/webpack.yml
@@ -26,8 +26,10 @@ jobs:
     strategy:
       matrix:
         node-version: [18.x, 20.x, 22.x]
-
+    
+      
     steps:
+    - run: cd ./cofmupy-gui-app
     - uses: actions/checkout@v4
 
     - name: Use Node.js ${{ matrix.node-version }}
