--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@angular/compiler-cli": "^20.2.0",
     "@types/node": "^24.10.1",
     "ts-node": "~10.9.0",
-    "typescript": "^5.9.0"
+    "typescript": "^5.9.0",
+    "webpack-cli": "^6.0.1"
   }
 }
