Change build CI

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -38,7 +38,8 @@ jobs:
         
     - name: Build
       run: |
-        npx webpack
+        ./node_modules/.bin/ng build
+        ls ./dist/cofmupy-gui
     - name: Add .nojekyll file
       run: touch ./dist/cofmupy-gui/browser/.nojekyll
       
