--- a/package.json
+++ b/package.json
@@ -29,10 +29,6 @@
   "devDependencies": {
     "@angular/build": "^20.2.0",
     "@angular/cli": "^20.2.0",
-    "@angular/compiler-cli": "^20.2.0",
-    "@types/node": "^24.10.1",
-    "ts-node": "~10.9.0",
-    "typescript": "^5.9.0",
-    "webpack-cli": "^6.0.1"
+    "@angular/compiler-cli": "^20.2.0"
   }
 }
