--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,6 +16,7 @@ concurrency:
   cancel-in-progress: false
 
 jobs:
+  # build job
   build:
     runs-on: ubuntu-latest
 
@@ -42,5 +43,22 @@ jobs:
         ls ./dist/cofmupy-gui
     - name: Add .nojekyll file
       run: touch ./dist/cofmupy-gui/browser/.nojekyll
+
+    - name: Upload build as artifact
+      uses: actions/upload-pages-artifact@v3
+      with:
+        path: './dist/cofmupy-gui/browser'
+
+  # Deploy job
+  deploy:
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+      - name: Deploy to GitHub Pages
+        id: deployment
+        uses: actions/deploy-pages@v4
       
 
