--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -45,21 +45,10 @@ jobs:
       run: touch ./dist/cofmupy-gui/browser/.nojekyll
 
     - name: Upload build as artifact
-      uses: actions/upload-pages-artifact@v3
+      uses: actions/upload-artifact@v4
       with:
-        name: cofmupy-gui
+        name: cofmupy-gui${{ matrix.node-version }}
         path: './dist/cofmupy-gui/browser'
 
-  # Deploy job
-  deploy:
-    environment:
-      name: github-pages
-      url: ${{ steps.deployment.outputs.page_url }}
-    runs-on: ubuntu-latest
-    needs: build
-    steps:
-      - name: Deploy to GitHub Pages
-        id: deployment
-        uses: actions/deploy-pages@v4
       
 
