--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -22,7 +22,7 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [20.x, 22.x]
+        node-version: [20, 22]
     
       
     steps:
@@ -47,7 +47,7 @@ jobs:
     - name: Upload build as artifact
       uses: actions/upload-artifact@v4
       with:
-        name: cofmupy-gui_V${{ matrix.node-version }}.zip
+        name: cofmupy-gui_V${{ matrix.node-version }}
         path: './dist/cofmupy-gui/browser'
 
       
