--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,15 +15,15 @@ concurrency:
   group: "pages"
   cancel-in-progress: false
 
-defaults:
- run:
-  working-directory: ./cofmupy-gui-app
-
 jobs:
   # build job
   build_app:
     runs-on: ubuntu-latest
-        
+    
+    defaults:
+      run:
+        working-directory: ./cofmupy-gui-app
+
     strategy:
       matrix:
         node-version: [20, 22]
@@ -36,7 +36,7 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
-        working-directory: ./cofmupy-gui-app
+        cache-dependency-path: '**/package-lock.json'
         
     - name: Install Dependencies
       run: npm ci
