--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -74,7 +74,7 @@ jobs:
           name: cofmupy-gui_final
           path: './deployed_app'
       - name: Clean artifacts
-        uses: actions/delete_artifacts@v4
+        uses: actions/delete_artifact@v4
         with:
           name: |
             cofmupy-gui_V20
