--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,7 +16,39 @@ concurrency:
   cancel-in-progress: false
 
 jobs:
-  # build job
+  # build node server script
+  build_server:
+    runs-on: ubuntu-latest
+    
+    defaults:
+      run:
+        working-directory: ./node-server
+    
+    steps:
+    - uses: actions/checkout@v4
+
+    - name: Use Node.js 20
+      uses: actions/setup-node@v4
+      with:
+        node-version: 20
+        cache: 'npm'
+        cache-dependency-path: '**/package-lock.json'
+        
+    - name: Install Dependencies
+      run: npm ci
+        
+    - name: Build
+      run: |
+        parcel build app.js
+        ls ./dist
+
+    - name: Upload build as artifact
+      uses: actions/upload-artifact@v4
+      with:
+        name: node-server
+        path: './node-server/dist'
+
+  # build application
   build_app:
     runs-on: ubuntu-latest
     
@@ -54,7 +86,7 @@ jobs:
   
   # Deploy app
   deploy_app:
-    needs: [build_app]
+    needs: [build_app, build_server]
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
@@ -74,7 +106,7 @@ jobs:
           name: cofmupy-gui_final
           path: './deployed_app'
       - name: Clean artifacts
-        uses: actions/delete_artifact@v4
+        uses: geekyeggo/delete-artifact@v5
         with:
           name: |
             cofmupy-gui_V20
