--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -115,7 +115,7 @@ jobs:
         run: |
           mv ./assets/*.bat .
           mv ./assets/*.sh .
-          mv ./assets/cofmupy-1.0.0-py3.whl .
+          mv ./assets/cofmupy-1.0.0-py3-none-any.whl .
 
       - uses: actions/download-artifact@v4
         with:
