Add metadata for backend compatibility

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -7,7 +7,7 @@ on:
 
 permissions:
   contents: write
-  
+
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -29,6 +29,16 @@ jobs:
       - run: npm ci
       - run: npm run build
 
+      - name: Generate metadata-dist.json
+        run: |
+          cat <<EOF > metadata-dist.json
+          {
+            "name": "cofmupy-gui",
+            "version": "${GITHUB_REF_NAME}",
+            "api_compatibility": $(cat metadata.json)
+          }
+          EOF
+
       - name: Archive dist
         run: |
           cd dist
@@ -37,4 +47,6 @@ jobs:
       - name: Create Release
         uses: softprops/action-gh-release@v2
         with:
-          files: ./cofmupy-gui-app/dist/CoFmuPy-gui-dist.zip
+          files: |
+            ./cofmupy-gui-app/dist/CoFmuPy-gui-dist.zip
+            metadata-dist.json
